# nlp-app

./: .gitattributes  README.md  app.py  nlp.ipynb  pyproject.toml
data/: reviews_processed_tsa.csv  yelp-reviews.csv
models/: lstm_model.h5  vectorizer.pkl
