[tool.poetry]
name = "nlp-app"
version = "1.0.0"
description = ""
authors = ["jaylesmajor <143688733+jaylesmajor@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "nlp_app" }
]


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
nltk = "^3.9.1"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
streamlit = "^1.39.0"
plotly = "^5.24.1"
lime = "^0.2.0.1"
numpy = "^2.1.2"
regex = "^2024.9.11"

[tool.poetry.packages]
name = "nlp_app"
from = "nlp_app"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
